--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Reading</title>
+    <title>Legoshi's Library</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,26 +13,25 @@
     <div class="kindle-container">
         <header>
             <nav class="top-nav">
-                <span class="left-align">11:29 AM</span>
+                <span class="left-align">All books are legally obtained through a Kindle Paperwhite or downloaded officially.</span>
                 <span class="center-align"></span>
-                <span class="right-align">WIFI ••••</span>
             </nav>
         </header>
 
         <main class="content">
-            <h1>The Alchemist</h1>
-            <h2>Paulo Coelho</h2>
+            <h1>Nintendo Operations Manual - Wii U</h1>
+            <h2>By Nintendo</h2>
             <hr>
             <div class="book-link">
-                <a href="sample.pdf" target="_blank">
-                    Read Book
+                <a href="/books/nwuom.pdf" target="_blank">
+                    Open Manual
                 </a>
             </div>
         </main>
 
         <footer>
             <div class="bottom-nav">
-                <span class="page-number">Ready to Read</span>
+                <span class="page-number">Ready to Read.</span>
                 <span class="page-indicator"></span>
                 <span class="page-count"></span>
             </div>
