--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <footer>
             <div class="bottom-nav">
                 <span class="page-number">Swipe to browse</span>
-                <h1><a href="lite.html">Visit the Lite version.</a></h1>
+                <h1><a href="pages/lite/lite.html">Visit the Lite version.</a></h1>
             </div>
         </footer>
     </div>
