--- a/pages/lite/lite.html
+++ b/pages/lite/lite.html
@@ -18,7 +18,7 @@
             <h1>My Library</h1>
             <ul class="book-list">
                 <li>
-                    <a href="books/nwuom.pdf" target="_blank">
+                    <a href="books/nwuom.html" target="_blank">
                         <h3>Wii U Manual</h3>
                         <p>Nintendo</p>
                     </a>
@@ -64,7 +64,7 @@
 
         <footer>
             <div class="bottom-nav">
-                <span class="page-info">Simple Version</span>
+                <span class="page-info">This version uses .jpg images instead of PDFs for devices that do not support a PDF Viewer.</span>
             </div>
         </footer>
     </div>
