--- a/index2.html
+++ b/index2.html
@@ -38,11 +38,22 @@
                     <div class="text-6xl">🌤️</div>
                 </div>
                 <div class="mt-6 border-t border-gray-200 pt-4">
-                     <p class="text-sm text-gray-600">Feels like: <strong>88°F</strong></p>
-                     <p class="text-sm text-gray-600">Wind: <strong>12 mph E</strong></p>
+                      <p class="text-sm text-gray-600">Feels like: <strong>88°F</strong></p>
+                      <p class="text-sm text-gray-600">Wind: <strong>12 mph E</strong></p>
                 </div>
             </div>
-
+            
+            <div class="bg-white rounded-lg shadow-md p-6">
+                 <h2 class="text-xl font-bold text-gray-800 mb-4">Manual Sections</h2>
+                 <ul class="space-y-3">
+                     <li><a href="#" class="text-blue-600 hover:underline">1. System Setup</a></li>
+                     <li><a href="#" class="text-blue-600 hover:underline">2. The Wii U GamePad</a></li>
+                     <li><a href="#" class="text-blue-600 hover:underline">3. System Settings</a></li>
+                     <li><a href="#" class="text-blue-600 hover:underline">4. Online Features</a></li>
+                     <li><a href="#" class="text-blue-600 hover:underline">5. Parental Controls</a></li>
+                     <li><a href="#" class="text-blue-600 hover:underline">6. Troubleshooting</a></li>
+                 </ul>
+            </div>
             <div class="bg-white rounded-lg shadow-md p-6">
                  <h2 class="text-xl font-bold text-gray-800 mb-4">Helpful Links</h2>
                  <ul class="space-y-3">
@@ -52,7 +63,7 @@
                  </ul>
             </div>
         </aside>
-        </div>
+    </div>
 
     <script>
         document.addEventListener('DOMContentLoaded', () => {
